# sparse-voxel-octree

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  STATUS.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gpu.yml  publish.yml
benchmarks/cpp/: benchmark_common.hpp  point_query_benchmark.cpp  raycast_benchmark.cpp  render_benchmark.cpp
benchmarks/results/: point_query.md  raycast.md  render.md
cuda/: generate_rays.cu  interpolation.cu  placeholder.cu  query_points.cu  raycast.cu  renderer.cu
docs/: _coverpage.md  _sidebar.md  architecture.md  cpp-api.md  data-layout.md  differentiability.md  documentation.md  examples.md  file-format.md  index.html  index.md  installation.md  packaging.md  performance-roadmap.md  python-api.md  pytorch-rendering.md  quickstart.md  testing.md  troubleshooting.md
examples/cpp/: query_example.cpp
examples/python/: forward_render.py  point_query.py  realtime_viewer.py  reconstruct_nerf_octree.py  sphere_slice.py
include/svo/: Builder.hpp  Camera.hpp  CoarseOccupancy.hpp  DeviceBuffer.hpp  Error.hpp  Interpolation.hpp  Math.hpp  Octree.hpp  Query.hpp  Raycast.hpp  Renderer.hpp  Serialization.hpp  Version.hpp
python/: bindings.cpp
scripts/: check_interval_sanitizer.py  check_package.py  generate_docsify.py
src/: Builder.cpp  Camera.cpp  CoarseOccupancy.cpp  Interpolation.cpp  Octree.cpp  Query.cpp  Raycast.cpp  Renderer.cpp  Serialization.cpp  Version.cpp
svo/: __init__.py  info.py  interpolation.py  payload.py  refinement.py  rendering.py  serialization.py
tests/cpp/: test_builder.cpp  test_camera.cpp  test_camera_cuda.cpp  test_coarse_occupancy.cpp  test_device_buffer.cpp  test_interpolation.cpp  test_interpolation_cuda.cpp  test_public_headers.cpp  test_query.cpp  test_query_cuda.cpp  test_raycast.cpp  test_raycast_cuda.cpp  test_renderer.cpp  test_renderer_cuda.cpp  test_serialization.cpp  test_smoke.cpp
tests/python/: test_build_tree.py  test_camera.py  test_import.py  test_interpolation.py  test_payload.py  test_query_cpu.py  test_raycast.py  test_reconstruct_nerf_octree.py  test_refinement.py  test_rendering.py  test_serialization.py  test_torch_cuda_interop.py
