[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "sparse-voxel-octree"
version = "0.1.0"
description = "Sparse voxel octree C++/CUDA library with Python bindings."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]
license = { file = "LICENSE" }
authors = [
  { name = "Sparse Voxel Octree Contributors" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=8"]
viz = ["matplotlib>=3.8"]

[project.urls]
Repository = "https://example.com/sparse-voxel-octree"

[tool.uv]
default-groups = []

[tool.scikit-build]
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"
wheel.packages = ["svo"]
